--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -3,6 +3,9 @@
 <h4>Ton personnage</h4>
 <p><%= @game.character_name %></p>
 
+<% @game.game_state.each do |item, value| %>
+  <p><%= item %> <%= value %></p>
+<% end %>
 <% @game.messages.each do |message| %>
   <p><%= message.content %></p>
 <% end %>
@@ -11,3 +14,5 @@
   <%= f.text_field :content %>
   <%= f.submit %>
 <% end %>
+
+<%= link_to "Homepage", root_path %>
