--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,13 +1,12 @@
-<h2><%= @game.name %></h2>
-
 <h4>Ton personnage</h4>
-<p><%= @game.character_name %></p>
+<p><%= @game.character.name %></p>
 
 <% @game.game_state.each do |item, value| %>
   <p><%= item %> <%= value %></p>
 <% end %>
+
 <% @game.messages.each do |message| %>
-  <p><%= message.content %></p>
+    <p><%= message.content %></p>
 <% end %>
 
 <%= form_with model: [@game, @message] do |f| %>
