--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
--<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title><%= content_for(:title) || "Lore Weaver" %></title>
@@ -19,6 +19,7 @@
 
   <body>
     <main>
+      <%= render "shared/navbar" %>
       <%= yield %>
     </main>
   </body>
