--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <main>
+    <main role="main" class="main-content" id="main-content">
       <%= render "shared/navbar" %>
       <%= yield %>
     </main>
